--- a/UnNamedWeibo/Base.lproj/Main.storyboard
+++ b/UnNamedWeibo/Base.lproj/Main.storyboard
@@ -286,6 +286,7 @@
                                                                     </connections>
                                                                 </collectionView>
                                                             </subviews>
+                                                            <color key="backgroundColor" red="0.88568291900093365" green="0.88568291900093365" blue="0.88568291900093365" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="bottom" secondItem="wWD-Yg-zal" secondAttribute="bottom" constant="5" id="25b-dI-Yl5"/>
                                                                 <constraint firstAttribute="height" constant="190" id="FPO-jh-u9z"/>
@@ -365,7 +366,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" red="0.97254901960784312" green="0.95294117647058818" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="backgroundColor" red="0.81664016300964826" green="0.81664016300964826" blue="0.81664016300964826" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstItem="ahg-PD-yVw" firstAttribute="top" secondItem="22v-tu-i6u" secondAttribute="top" constant="35" id="6Eg-Pu-qoY"/>
                                         <constraint firstItem="QQK-qW-FwU" firstAttribute="leading" secondItem="vsj-oN-jyf" secondAttribute="trailing" constant="2" id="IT7-RS-t3Q"/>
